# embvm-demo-platforms

./: .gitignore  README.md  meson.build  meson_options.txt
docs/project-history/2020/2020-09/: 2020-09-30T21:58:49Z_note_FVpOfTnBUSueOwtg.md
src/: meson.build
src/hw_platforms/blinky_simulator/: blinky_simulator_hw_platform.cpp  blinky_simulator_hw_platform.hpp  meson.build
src/hw_platforms/fwdemo_simulator/: meson.build
src/hw_platforms/nrf52/nrf52dk_blinky/: nrf52dk_blinky_hw_platform.hpp
src/hw_platforms/nrf52840_dongle/blinky/: meson.build  nrf52_dongle_hw_platform.cpp  nrf52_dongle_hw_platform.hpp
src/hw_platforms/nrf52dk/blinky/: meson.build  nrf52dk_blinky_hw_platform.cpp  nrf52dk_blinky_hw_platform.hpp
src/hw_platforms/nrf52dk/fwdemo/: meson.build  nrf52dk_fwdemo_hw_platform.cpp  nrf52dk_fwdemo_hw_platform.hpp
src/hw_platforms/nrf52dk_blinky/: meson.build  nrf52dk_blinky_hw_platform.cpp
src/hw_platforms/nucleo_l4r5zi/blinky/: NucleoL4R5ZI_Blinky_HWPlatform.cpp  NucleoL4R5ZI_Blinky_HWPlatform.hpp  meson.build
src/hw_platforms/nucleo_l4r5zi/fwdemo/: NucleoL4R5ZI_fwdemo_HWPlatform.cpp  NucleoL4R5ZI_fwdemo_HWPlatform.hpp  meson.build
src/hw_platforms/simulator/blinky/: blinky_simulator_hw_platform.cpp  blinky_simulator_hw_platform.hpp  meson.build
src/hw_platforms/simulator/fwdemo/: fwdemo_simulator_hw_platform.cpp  fwdemo_simulator_hw_platform.hpp  meson.build
src/hw_platforms/simulator/fwdemo_simulator/: fwdemo_simulator_hw_platform.cpp  fwdemo_simulator_hw_platform.hpp
subprojects/: STM32CubeL4.wrap  aardvark.wrap  embvm-core.wrap  freertos-interface.wrap  nordic.wrap  st-vl53l1x.wrap  stm32l4.wrap  two-tone-oled.wrap
